--- a/Financialborrowing/package.json
+++ b/Financialborrowing/package.json
@@ -7,18 +7,6 @@
     "lib": "lib"
   },
   "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cli": "^2.2.0",
-    "gulp-imagemin": "^6.2.0",
-    "gulp-less": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-webserver": "^0.9.1",
-    "less": "^3.11.1",
-    "vue": "^2.6.11",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.6",
     "@babel/core": "^7.0.0",
     "art-template": "^4.13.2",
     "babel-core": "^6.26.3",
@@ -29,19 +17,34 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.2.0",
     "debug": "~2.6.9",
+    "echarts": "^4.7.0",
     "file-loader": "^4.3.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.2.0",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-webserver": "^0.9.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-withimg-loader": "^0.1.16",
     "jquery": "^3.4.1",
+    "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "sass": "^1.3.0",
     "sass-loader": "^8.0.0",
     "scss-loader": "0.0.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.3.0",
+    "vue": "^2.6.11",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-loader": "^15.7.2",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
